Lang.bnf
# BNF of LANG

<program> ::= { <statement> }

<statement> ::= <expression>; | <if_statement> | <goto_statement>; | <label>: <statement>

<tail> ::= <indexator><tail> | <args><tail> |

<indexator> ::= \[ <expression> \]

<args> ::= ( [ <expression> {, <expression> } ] )

<expression> ::= [ <unar> ] <operand>[<tail>] { <binar><expression> }

<operand> ::= ( <expression> ) | <literal>

<literal> ::= <string> | <int> | <float> | <code_block> | <variable>

<code_block> ::= \{ <program> \}

<goto_statement> ::= goto <label>

<if_statement> ::= if <expression> <code_block> [ else <code_block> ]

<unar> ::= - | ! | $

<binar> ::= + | - | * | / | % | > | < | ~ | & | \| | =

<variable> ::= -//-

<int> ::= -//-

<float> ::= -//-

<string> ::= -//-

<label> ::= -//-
